# itch-message-generator

./: .gitignore  CMakeLists.txt  README.md  constants.hpp  generator.cpp  generator.h  helper.cpp  helper.h  itch_gen  main.cpp  messages.cpp  messages.h
.github/workflows/: ci.yml
generator/: generator.cpp  generator.h
include/: helper.h
src/: generator.cpp  generator.h  helper.cpp  itch_gen  main.cpp  messages.cpp  messages.h
test/benchmarking/: benchmark_batched_sending  benchmark_batched_sending.cpp  benchmark_generate_message.cpp  benchmark_generator
test/benchmarking/benchmark_independent_sending/: benchmark_independent_sending  generator.h  helper.h  independent_sending  main.cpp  messages.cpp  messages.h
test/unit/: test_generator.cpp  test_serialize  test_serialize.cpp
test/unit_tests/: test_generator  test_generator.cpp  test_serialize.cpp
